--- a/contact.css
+++ b/contact.css
@@ -1,9 +1,10 @@
 /* Base Layout & Typography */
 body {
+  text-align: center;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   line-height: 1.6;
   background-color: #fdfdfd;
-  color: #222;
+  color: #4b398b;
 }
 
 section.contact {
@@ -21,7 +22,7 @@ section.contact {
   font-size: 2.5rem;
   text-align: center;
   margin-bottom: 1.5rem;
-  color: #333;
+  color: #4b398b;
 }
 
 .comedian-intro {
@@ -32,7 +33,7 @@ section.contact {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
-  font-style: italic;
+  font-style: normal;
 }
 
 /* Contact Content */
@@ -53,7 +54,7 @@ section.contact {
 .contact-method strong {
   display: block;
   margin-bottom: 0.5rem;
-  color: #333;
+  color: #4b398b;
   font-size: 1.1rem;
 }
 
